Closed
Bug 1588512
Opened 6 years ago
Closed 5 years ago
QM: Clearing of origins during shutdown may take long time to finish (likely causing shutdown hangs)
Categories
(Core :: Storage: Quota Manager, defect, P3)
Core
Storage: Quota Manager
Tracking
()
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| firefox86 | --- | fixed |
People
(Reporter: janv, Assigned: sg)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
I reported this issue in bug 1541776 comment 25. We probably can't just abort that operation because it can be a privacy related clear. It needs to be investigated more if we see too many shutdown hangs like this.
| Reporter | ||
Comment 1•6 years ago
|
||
I reported this issue also in bug 1541776 comment 26. The clearing may be slowed down by data clearing in the shadow database of LocalStorage.
Fortunately, the shadow database will be removed at some point.
Comment 2•5 years ago
|
||
This happens indeed, it seems. See bug 1542485 comment 26.
Comment 3•5 years ago
|
||
Next task would be, to sort the relevant crashes caused by this out of bug 1542485. I'll try to get to this.
Flags: needinfo?(jstutte)
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → sgiesecke
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•5 years ago
|
||
Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/43016310e23e
Avoid blocking progress during a clear operation on failure to remove a directory. r=dom-workers-and-storage-reviewers,janv
Comment 6•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox86:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Updated•4 years ago
|
Flags: needinfo?(jstutte)
You need to log in
before you can comment on or make changes to this bug.
Description
•