Bug 1588512 - Avoid blocking progress during a clear operation on failure to remove a directory. r=dom-workers-and-storage-reviewers,janv

Differential Revision: https://phabricator.services.mozilla.com/D100093